// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Schema should render 1`] = `
<div
  id="schemaVis"
>
  <input
    id="schemaVis"
    name="foo"
    required={true}
    schemaVis={
      Object {
        "componentProps": undefined,
        "components": Object {
          "EmailInputField": [Function],
          "InputField": "input",
          "NumberInputField": <input
            type="number"
      />,
        },
        "defaultComponents": undefined,
        "prefix": "meta.vis",
        "schema": Object {
          "meta": Object {
            "vis": Object {
              "component": "NumberInputField",
              "editable": true,
            },
          },
          "title": "Foo",
          "type": "number",
        },
      }
    }
    styles={Object {}}
    type="number"
  />
  <input
    id="schemaVis"
    name="foobar"
    required={true}
    schemaVis={
      Object {
        "componentProps": undefined,
        "components": Object {
          "EmailInputField": [Function],
          "InputField": "input",
          "NumberInputField": <input
            type="number"
      />,
        },
        "defaultComponents": undefined,
        "prefix": "meta.vis",
        "schema": Object {
          "description": "Foo is bar",
          "meta": Object {
            "vis": Object {
              "component": "EmailInputField",
              "editable": true,
            },
          },
          "title": "Foobar",
          "type": "string",
        },
      }
    }
    styles={Object {}}
    type="email"
  />
  <input
    id="schemaVis"
    name="bar"
    required={false}
    schemaVis={
      Object {
        "componentProps": undefined,
        "components": Object {
          "EmailInputField": [Function],
          "InputField": "input",
          "NumberInputField": <input
            type="number"
      />,
        },
        "defaultComponents": undefined,
        "prefix": "meta.vis",
        "schema": Object {
          "meta": Object {
            "vis": Object {
              "component": "InputField",
              "editable": true,
              "ordinal": 1,
            },
          },
          "required": true,
          "title": "Bar",
          "type": "string",
        },
      }
    }
    styles={Object {}}
  />
</div>
`;

exports[`Render Schema should render single field schema 1`] = `
<input
  id="schemaVis"
  name="bar"
  required={false}
  schemaVis={
    Object {
      "componentProps": undefined,
      "components": Object {
        "EmailInputField": [Function],
        "InputField": "input",
        "NumberInputField": <input
          type="number"
    />,
      },
      "defaultComponents": undefined,
      "prefix": "meta.vis",
      "schema": Object {
        "meta": Object {
          "vis": Object {
            "component": "NumberInputField",
            "editable": true,
            "ordinal": 0,
          },
        },
        "title": "Foo",
        "type": "number",
      },
    }
  }
  styles={Object {}}
  type="number"
/>
`;

exports[`Render Schema should render without name and with namespace 1`] = `
<div
  id="schemaVis"
>
  <input
    id="schemaVis"
    name="foo.foo"
    required={true}
    schemaVis={
      Object {
        "componentProps": undefined,
        "components": Object {
          "EmailInputField": [Function],
          "InputField": "input",
          "NumberInputField": <input
            type="number"
      />,
        },
        "defaultComponents": undefined,
        "prefix": "meta.vis",
        "schema": Object {
          "meta": Object {
            "vis": Object {
              "component": "NumberInputField",
              "editable": true,
            },
          },
          "title": "Foo",
          "type": "number",
        },
      }
    }
    styles={Object {}}
    type="number"
  />
  <input
    id="schemaVis"
    name="foo.foobar"
    required={true}
    schemaVis={
      Object {
        "componentProps": undefined,
        "components": Object {
          "EmailInputField": [Function],
          "InputField": "input",
          "NumberInputField": <input
            type="number"
      />,
        },
        "defaultComponents": undefined,
        "prefix": "meta.vis",
        "schema": Object {
          "description": "Foo is bar",
          "meta": Object {
            "vis": Object {
              "component": "EmailInputField",
              "editable": true,
            },
          },
          "title": "Foobar",
          "type": "string",
        },
      }
    }
    styles={Object {}}
    type="email"
  />
  <input
    id="schemaVis"
    name="foo.bar"
    required={false}
    schemaVis={
      Object {
        "componentProps": undefined,
        "components": Object {
          "EmailInputField": [Function],
          "InputField": "input",
          "NumberInputField": <input
            type="number"
      />,
        },
        "defaultComponents": undefined,
        "prefix": "meta.vis",
        "schema": Object {
          "meta": Object {
            "vis": Object {
              "component": "InputField",
              "editable": true,
              "ordinal": 1,
            },
          },
          "required": true,
          "title": "Bar",
          "type": "string",
        },
      }
    }
    styles={Object {}}
  />
</div>
`;

exports[`Render Schema should render without properties 1`] = `<div />`;

exports[`Render Schema should render without required fields 1`] = `
<div
  id="schemaVis"
>
  <input
    id="schemaVis"
    name="foo"
    required={false}
    schemaVis={
      Object {
        "componentProps": undefined,
        "components": Object {
          "EmailInputField": [Function],
          "InputField": "input",
          "NumberInputField": <input
            type="number"
      />,
        },
        "defaultComponents": undefined,
        "prefix": "meta.vis",
        "schema": Object {
          "meta": Object {
            "vis": Object {
              "component": "NumberInputField",
              "editable": true,
            },
          },
          "title": "Foo",
          "type": "number",
        },
      }
    }
    styles={Object {}}
    type="number"
  />
  <input
    id="schemaVis"
    name="foobar"
    required={false}
    schemaVis={
      Object {
        "componentProps": undefined,
        "components": Object {
          "EmailInputField": [Function],
          "InputField": "input",
          "NumberInputField": <input
            type="number"
      />,
        },
        "defaultComponents": undefined,
        "prefix": "meta.vis",
        "schema": Object {
          "description": "Foo is bar",
          "meta": Object {
            "vis": Object {
              "component": "EmailInputField",
              "editable": true,
            },
          },
          "title": "Foobar",
          "type": "string",
        },
      }
    }
    styles={Object {}}
    type="email"
  />
  <input
    id="schemaVis"
    name="bar"
    required={false}
    schemaVis={
      Object {
        "componentProps": undefined,
        "components": Object {
          "EmailInputField": [Function],
          "InputField": "input",
          "NumberInputField": <input
            type="number"
      />,
        },
        "defaultComponents": undefined,
        "prefix": "meta.vis",
        "schema": Object {
          "meta": Object {
            "vis": Object {
              "component": "InputField",
              "editable": true,
              "ordinal": 1,
            },
          },
          "required": true,
          "title": "Bar",
          "type": "string",
        },
      }
    }
    styles={Object {}}
  />
</div>
`;
